--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [platformio]
 src_dir = RFLink
 
@@ -16,16 +15,11 @@ src_dir = RFLink
 framework = arduino
 monitor_speed = 57600
 lib_ldf_mode = chain+
-;build_flags = -DAC_LABELS='"${PROJECT_SRC_DIR}/9_AutoConnect.h"'  ; For allowing tabs renaming in AtoConnect menu
 
 [common]
 ESPlibs =
     ESP8266WiFi
     PubSubClient
-
-Autoconnectlibs =
-    Autoconnect
-    PageBuilder
     ArduinoJson
 
 OLEDlibs =
@@ -36,13 +30,13 @@ OLEDlibs =
 platform = espressif8266
 board = d1_mini
 upload_speed = 921600
-lib_deps = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:nodemcuv2]
 ;platform = espressif8266
 ;board = nodemcuv2
 ;upload_speed = 256000
-;lib_deps = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:doitESP32]
 ;platform = espressif32
@@ -52,27 +46,27 @@ lib_deps = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
 ;board_build.f_flash = 40000000L
 ;board_build.flash_mode = dio
 ;upload_speed = 921600
-;lib_deps = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:arduino_uno]
 ;platform = atmelavr
 ;board = uno
 ;;board_build.f_cpu = 8000000L
 ;lib_deps = 
-;lib_ignore = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_ignore = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:arduino_nano]
 ;platform = atmelavr
 ;board = nanoatmega328
 ;;board_build.f_cpu = 8000000L
-;lib_ignore = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_ignore = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:arduino_promini8]
 ;platform = atmelavr
 ;board = pro8MHzatmega328
-;lib_ignore = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_ignore = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:arduino_mega]
 ;platform = atmelavr
 ;board = megaatmega2560
-;lib_ignore = ${common.ESPlibs} ${common.Autoconnectlibs} ${common.OLEDlibs}
+;lib_ignore = ${common.ESPlibs} ${common.OLEDlibs}
