--- a/platformio.ini
+++ b/platformio.ini
@@ -30,12 +30,16 @@ OLEDlibs =
 platform = espressif8266
 board = d1_mini
 upload_speed = 921600
+board_build.ldscript = eagle.flash.4m1m.ld
+board_build.filesystem = littlefs
 lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:nodemcuv2]
 ;platform = espressif8266
 ;board = nodemcuv2
 ;upload_speed = 256000
+;board_build.ldscript = eagle.flash.4m1m.ld
+;board_build.filesystem = littlefs
 ;lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:doitESP32]
@@ -46,6 +50,8 @@ lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 ;board_build.f_flash = 40000000L
 ;board_build.flash_mode = dio
 ;upload_speed = 921600
+;board_build.ldscript = eagle.flash.4m1m.ld
+;board_build.filesystem = littlefs
 ;lib_deps = ${common.ESPlibs} ${common.OLEDlibs}
 
 ;[env:arduino_uno]
