--- a/platformio.ini
+++ b/platformio.ini
@@ -10,29 +10,40 @@
 
 [platformio]
 src_dir = RFLink
+build_dir = .pioenvs
+workspace_dir = .pioenvs
+build_cache_dir = .cache
+default_envs = RFLink
 
 [env]
-framework = arduino
-monitor_speed = 57600
+framework                 = arduino
+board_build.flash_mode    = dout
+monitor_speed             = 115200
+upload_speed              = 115200
+upload_resetmethod        = nodemcu
+upload_port               = COM5
+build_unflags             = -Wall
+                            -Wsign-compare
+                            -Wdeprecated-declarations
 
-[common]
+build_flags               = -Wno-sign-compare
+                            -Wno-deprecated-declarations
 
-
-[env:d1_mini]
-platform = espressif8266
+[env:RFLink]
+platform = espressif8266@2.6.2
+platform_packages = framework-arduinoespressif8266 @ https://github.com/tasmota/Arduino/releases/download/2.7.4.1/esp8266-2.7.4.1.zip
 board = d1_mini
-upload_speed = 921600
-board_build.ldscript = eagle.flash.4m1m.ld
-board_build.filesystem = littlefs
+;board_build.ldscript = eagle.flash.1m.ld
 
-;[env:doitESP32]
-;platform = espressif32
-;board = esp32doit-devkit-v1
-;;board_build.f_cpu = 240000000L
+[env:RFLink32]
+platform = espressif32
+platform_packages = tool-esptoolpy@1.20800.0
+board = esp32doit-devkit-v1
+board_build.f_cpu = 240000000L
 ;board_build.f_cpu =  80000000L
 ;board_build.f_flash = 40000000L
-;board_build.flash_mode = dio
-;upload_speed = 921600
+board_build.flash_mode = dio
+upload_speed = 921600
 ;board_build.ldscript = eagle.flash.4m1m.ld
 ;board_build.filesystem = littlefs
 
