--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,9 @@ default_envs = RFLink
 
 [env]
 framework                 = arduino
+board                     = d1_mini
+board_build.ldscript      = eagle.flash.4m1m.ld
+board_build.filesystem    = littlefs
 board_build.flash_mode    = dout
 monitor_speed             = 115200
 upload_speed              = 115200
@@ -32,5 +35,3 @@ build_flags               = -Wno-sign-compare
 [env:RFLink]
 platform = espressif8266@2.6.2
 platform_packages = framework-arduinoespressif8266 @ https://github.com/tasmota/Arduino/releases/download/2.7.4.1/esp8266-2.7.4.1.zip
-board = d1_mini
-;board_build.ldscript = eagle.flash.1m.ld
